--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru" class="h-100">
 
 <head>
     <!-- Required meta tags -->
@@ -7,61 +7,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
     <title>
         {% if title %}
         {{ title }}
         {% else %}
-        Экзаменационное задание
+        Электронная библиотека
         {% endif %}
     </title>
 </head>
 
-<body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="{{ url_for('index') }}">Электронная библиотека</a>
-
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-between" id="navbarNavDropdown">
-                <form class="d-flex mx-auto w-25" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Поиск" aria-label="Search">
-                    <button class="btn btn btn-outline-light" type="submit">Поиск</button>
-                </form>
-
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link {% if request.endpoint == 'users' %}active{% endif %}" aria-current="page"
-                            href="{# url_for('users') #}">Список пользователей</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link {% if request.endpoint == 'users' %}active{% endif %}" aria-current="page"
-                            href="{# url_for('visits.logs') #}">Журнал посещений</a>
-                    </li>
-
-                    <li class="nav-item">
-                        {# if current_user.is_authenticated #}
-                        <!-- <a class="nav-link" aria-current="page" href="{# url_for('auth.logout') #}">Выйти</a> -->
-                        {# else #}
-                        <a class="nav-link {% if request.endpoint == 'auth.login' %}active{% endif %}"
-                            aria-current="page" href="{# url_for('auth.login') #}">Войти</a>
-                        {# endif #}
-                    </li>
-
-
-                </ul>
-            </div>
-        </div>
-    </nav>
-
+<body class="d-flex flex-column h-100">
     <header>
-        {% block header %}
-
-        {% endblock %}
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="{{ url_for('index') }}">Электронная библиотека</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link {% if request.endpoint == 'users' %}active{% endif %}"
+                                aria-current="page" href="{# url_for('users') #}">Мои рецензии</a>
+                        </li>
+                        <li class="nav-item">
+                            {% if current_user.is_authenticated %}
+                            <a class="nav-link" aria-current="page" href="{# url_for('auth.logout') #}">Выйти</a>
+                            {% else %}
+                            <a class="nav-link {% if request.endpoint == 'auth.login' %}active{% endif %}"
+                                aria-current="page" href="{{ url_for('auth.login') }}">Войти</a>
+                            {% endif %}
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </header>
 
     <div class="alerts">
@@ -75,17 +60,24 @@
         {% endwith %}
     </div>
 
-    <main>
+    <main class="my-3 flex-shrink-0">
         <div class="container">
             {% block content %}
+            <h1>Содержимое по умолчанию</h1>
             {% endblock %}
         </div>
     </main>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    <footer class="footer mt-auto py-3 bg-dark ">
+        <div class="container text-center">
+            <span class="text-muted">Рябов К. Д., гр. 201-351</span>
+        </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
-    <script src="{{ url_for('static', filename='main.js') }}"></script>
+
 </body>
 
 </html>
