--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -37,7 +37,7 @@
                         </li>
                         <li class="nav-item">
                             {% if current_user.is_authenticated %}
-                            <a class="nav-link" aria-current="page" href="{# url_for('auth.logout') #}">Выйти</a>
+                            <a class="nav-link" aria-current="page" href="{{ url_for('auth.logout') }}">Выйти</a>
                             {% else %}
                             <a class="nav-link {% if request.endpoint == 'auth.login' %}active{% endif %}"
                                 aria-current="page" href="{{ url_for('auth.login') }}">Войти</a>
