--- a/app/templates/books/form.html
+++ b/app/templates/books/form.html
@@ -1,29 +1,29 @@
-{% macro render_book_form(url, genres) %}
+{% macro render_book_form(url, genres, book={}) %}
 
 <form method="POST" action="{{ url }}" enctype="multipart/form-data">
     <div class="mb-3 row">
         <div class="col-md-6 d-flex flex-column">
             <div class="mb-3">
                 <label for="name">Название</label>
-                <input class="form-control" type="text" name="name" id="name">
+                <input class="form-control" type="text" name="name" id="name" value="{{ book.name }}">
             </div>
             <div class="mb-3">
                 <label for="author">Автор</label>
-                <input class="form-control" type="text" name="author" id="author">
+                <input class="form-control" type="text" name="author" id="author" value="{{ book.author }}">
             </div>
             <div class="mb-3 d-flex flex-column flex-grow-1">
                 <label for="desc">Описание</label>
-                <textarea class="form-control flex-grow-1" name="desc" id="desc" cols="30" rows="5"></textarea>
+                <textarea class="form-control flex-grow-1" name="desc" id="desc" cols="30" rows="5">{{ book.desc }}</textarea>
             </div>
             <div class="mb-3 d-flex flex-column flex-grow-1">
                 <label for="publisher">Издатель</label>
-                <input class="form-control" type="select" name="publisher" id="publisher">
+                <input class="form-control" type="select" name="publisher" id="publisher" value="{{ book.publisher }}">
             </div>
             <div class="mb-3 d-flex flex-column flex-grow-1">
                 <label for="genres">Жанры</label>
                 <select class="form-select" multiple aria-label="multiple select example" id="genres" name="genres">
                     {% for genre in genres %}
-                        <option value="{{ genre.id }}">{{ genre.name }}</option>
+                        <option {% if genre in book.genres %} selected {% endif %} value="{{ genre.id }}">{{ genre.name }}</option>
                     {% endfor %}
                 </select>
             </div>
@@ -31,7 +31,7 @@
                 <div class="col-6 mb-3 d-flex flex-column flex-grow-1">
                     <label for="volume" class="control-label">Количество страниц</label>
                     <div class="col">
-                        <input class="form-control flex-grow-1" type="number" min="1" step="1" value="1" name="volume"
+                        <input class="form-control flex-grow-1" type="number" min="1" step="1" value="{{ book.volume }}" name="volume"
                             id="volume">
                     </div>
                 </div>
@@ -39,19 +39,23 @@
                     <label for="year" class="control-label">Год выпуска</label>
                     <div class="col">
                         <input class="form-control flex-grow-1" type="number" min="1901" max="2155" step="1"
-                            value="2022" name="year" id="year">
+                            value="{{ book.year }}" name="year" id="year">
                     </div>
                 </div>
             </div>
         </div>
+
         <div class="col-md-6 d-flex flex-column">
             <div class="mb-3">
                 <label for="preview_img">Обложка</label>
-                <input class="form-control" type="file" name="preview_img" id="preview_img">
+                <input class="form-control" type="file" name="preview_img" id="preview_img"
+                    {% if request.endpoint in ['books.update'] %} disabled {% endif %}>
             </div>
             <div class="mb-3 background-preview p-3 rounded d-flex align-items-center justify-content-center">
-                <img src="#" class="img-fluid d-none" alt="">
-                <label for="preview_img" class="btn btn-dark">Выбрать изображение</label>
+                <img src="#вставить url обложки" class="img-fluid d-none" alt="">
+                <label for="preview_img"
+                    class="btn btn-dark {% if request.endpoint in ['books.update'] %} disabled {% endif %}">Выбрать
+                    изображение</label>
             </div>
         </div>
     </div>
