Added delete and image upload

--- a/app/templates/books/show.html
+++ b/app/templates/books/show.html
@@ -4,7 +4,7 @@
     <div class="row">
         <h3> {{ book.name }}</h4>
         <div class="col-4">
-            <img src="https://kawai.shikimori.one/system/animes/original/6.jpg?1633690719" class="img-fluid img-thumbnail" alt="...">
+            <img src="{{ book.image.url }}" class="img-fluid img-thumbnail" alt="...">
         </div>
         <div class="col-4">
             <p>Автор: {{ book.author }}</p>
