--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,11 +8,11 @@
     <div class="card mb-3 py-1 {% if loop.last %} ms-5 {% else %} mx-5 {% endif %}" style="max-width: 540px;" >
         <div class="row g-0">
             <div class="col-md-4 my-auto">
-                <img src="https://kawai.shikimori.one/system/animes/original/6.jpg?1633690719" class="img-fluid rounded-start" alt="">
+                <img src="{{ book.image.url }}" class="img-fluid rounded-start" alt="">
             </div>
             <div class="col-md-8">
                 <div class="card-body py-0 pe-0">
-                    <h5 class="card-title">{{ book.name }}</h5>
+                    <h5 class="card-title" id="card-title">{{ book.name }}</h5>
                     <h6 class="card-subtitle mb-2 text-muted">{{ book.year }}</h6>
 
                     <ul class="list-group list-group-flush border-bottom">
@@ -28,14 +28,14 @@
                             <p class="card-text">Рецензий: {{ book.rating_num }}</p>
                         </div>
                     </div>
-                    <div class="btn-group mt-3" role="group" aria-label="Basic example">
+                    <div class="btn-group mt-5" role="group" aria-label="Basic example">
                         <a type="button" class="btn btn-primary" href="{{ url_for('books.show', book_id=book.id) }}">Просмотр</a>
                         {% if current_user.is_authenticated and current_user.can('update_book', record=book) %}
                             <a type="button" class="btn btn-secondary" href="{{ url_for('books.edit', book_id=book.id) }}">Редактирование</a>
                         {% endif %}
                         {% if current_user.is_authenticated and current_user.can('delete_book', record=book) %}
-                            <button type="button" class="btn btn-danger" data-url="{# url_for('delete', user_id=user.id) #}" data-bs-toggle="modal"
-                                data-bs-target="#delete-user-modal">Удалить</button>
+                            <button type="button" class="btn btn-danger" data-url="{{ url_for('books.delete', book_id=book.id) }}" data-bs-toggle="modal"
+                                data-bs-target="#delete-book-modal">Удалить</button>
                         {% endif %}
                     </div>
                 </div>
@@ -52,6 +52,27 @@
 </div>
 <div class="mb-5">
     {{ render_pagination(pagination, request.endpoint) }}
+</div>
+
+<div class="modal fade" id="delete-book-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-center">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Удаление книги</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                Вы точно хотите удалить книгу <span id="book_name"></span>?
+                <form action="" method="POST">
+                    <input id="delete-btn" type="submit" class="d-none">
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Нет</button>
+                <label for="delete-btn" class="btn btn-danger">Да</label>
+            </div>
+        </div>
+    </div>
 </div>
 
 {% endblock %}
